#246 NullPointerException when pricing a terminable on demand Repo + Sonar fixes